--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 :root {
     --font: "Roboto Mono";
-    --background: src url("../images/wallpaper.png");
+    --background: url("../images/wallpaper.png");
     --foreground: #fffffe;
     --pink: #e53170;
     --red: #f25f4c;
