--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 :root {
     --font: "Roboto Mono";
-    --background: url(../images/wallpaper.png);
+    --background-image: url("../images/wallpaper.png");
     --foreground: #fffffe;
     --pink: #e53170;
     --red: #f25f4c;
@@ -19,7 +19,7 @@ html {
 }
 
 body {
-    background: var(--background);
+    background: var(--background-image);
     width: 100vw;
     height: 100vh;
     margin: 0;
