--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 
 :root {
     --font: "Roboto Mono";
-    --background:  #04043c;
+    --background:  #030322;
     --foreground: #fffffe;
     --pink: #e53170;
     --red: #f25f4c;
